welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: '(' expected but identifier found.
  if a==b{
     ^sumDouble:10: error: illegal start of simple expression
} 
^